<resources>
    <string name="app_name">Social Sketch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="share_button">Share</string>
    <string name="undo_button">Undo</string>
    <string name="redo_button">Redo</string>
    <string name="clear_button">Clear</string>
    <string name="eraser_button">Erase</string>
    <string name="Brush_button">Brush</string>
    <string name="color_button">Color</string>
    <string name="save_button">Save</string>
    <string name="login">Login</string>
    <string name="create_account">Create An Account</string>
    <string name="login_with_google">Login With Google</string>
    <string name="create_account_new_button">Create</string>
    <string name="create_account_back_button">Back</string>
    <string name="choose_friends_button">Choose Friends to Draw With</string>
    <string name="addfriend">Add friend</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_room_buttton">Create New Room</string>
    <string name="local_use_button">Use Local Canvas</string>
    <string name="message_room_button">Messages</string>
    <string name="chat_fragment_send_button">Send</string>
    <string name="profile_other">Other Profiles</string>
    <string name="profile_me">My Profile</string>
    <string name="add_backround_option">Add Background</string>

</resources>
