<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/color_button"
        android:text="@string/color_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_tools"
        android:shadowColor="#435761"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/Brush_button"
        android:id="@+id/brush_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_tools"
        android:shadowColor="#435761"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/erase_button"
        android:text="@string/eraser_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_tools"
        android:shadowColor="#435761"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/clear_button"
        android:text="@string/clear_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_tools"
        android:shadowColor="#435761"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/undo_button"
        android:text="@string/undo_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_tools"
        android:shadowColor="#435761"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/redo_button"
        android:text="@string/redo_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_tools"
        android:shadowColor="#435761"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/save_button"
        android:text="@string/save_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_tools"
        android:shadowColor="#435761"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/share_button"
        android:text="@string/share_button"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/button_tools"
        android:shadowColor="#435761"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
</LinearLayout>
