<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kiwitech.socialsketch.LoginFragment"
    android:background="#EEEEEE"
    android:clickable="true"
    android:id="@+id/login_window">

    <LinearLayout
        android:id="@+id/login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <EditText
            android:layout_marginLeft="20sp"
            android:hint="Email Id"
            android:singleLine="true"
            android:layout_marginRight="20sp"
            android:layout_marginTop="200sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_email_id"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal"
            android:imeOptions="actionNext" />

        <EditText
            android:hint="Password"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"
            android:id="@+id/login_google"
            android:layout_gravity="center_horizontal" />

        <Button
            android:textSize="10sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:id="@+id/create_account_button"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</FrameLayout>
